<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Grokart.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.Grokart.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_createReportTitle"
        android:layout_width="277dp"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/k2d_bold"
        android:text="@string/create_new_reports"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="185dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"

        android:layout_marginStart="52dp"
        android:layout_marginTop="25dp"

        android:text="@string/title"
        android:textAlignment="textStart"
        android:textSize="24sp"
        android:textStyle="bold"
        android:lineSpacingExtra="-9sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_createReportTitle" />

    <EditText
        android:id="@+id/et_title"
        android:layout_width="305dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@color/teal_700"
        android:backgroundTint="#D9D9D9"
        android:backgroundTintMode="src_in"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_store"
        android:layout_width="183dp"
        android:layout_height="28dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="15dp"
        android:text="@string/store"
        android:textAlignment="textStart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_title" />

    <Button
        android:id="@+id/btn_createReport"
        android:layout_width="184dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/green"
        android:text="@string/create_new_reports"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_description"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/msgResponse"
        android:layout_width="359dp"
        android:layout_height="19dp"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_createReportTitle" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="183dp"
        android:layout_height="28dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="15dp"
        android:text="@string/description"
        android:textAlignment="textStart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="10dp"
        android:background="@color/teal_700"
        android:backgroundTint="#D9D9D9"
        android:backgroundTintMode="src_in"
        android:ems="10"
        android:hint="@string/description"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/teal_700"
        android:backgroundTint="#D9D9D9"
        android:backgroundTintMode="src_in"
        android:contentDescription="@string/store"
        android:ems="10"
        android:minHeight="48dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_store" />


</androidx.constraintlayout.widget.ConstraintLayout>