<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    style="@style/constraint_background_style"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="src_in"
    android:foregroundTintMode="src_in"
    tools:context=".MainActivity">
...
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/tv_main_welcome"
        android:layout_width="298dp"
        android:layout_height="37dp"
        android:layout_marginTop="36dp"
        android:text="@string/welcome_user"
        android:textAlignment="center"
        android:textSize="20sp"
...
