...
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_reports_page_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_reports"
        android:layout_width="403dp"
        android:layout_height="431dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reportsMsgResponse" />
...
